--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
 						{{#each avions}}
 						<article class="thumb">
 							<a href="{{url}}" class="image"><img src="{{url}}" alt="" />
-						<center>	<h2 class="paddingcoeur grand"><i class="fa fa-heart" aria-hidden="true"></i> {{votes}}</h2></center>
+						<center>	<h2 class="paddingcoeur grand gras"><i class="fa fa-heart" aria-hidden="true"></i> {{votes}}</h2></center>
 							</a>
 							<center><a href="/vote/{{id}}" class="button special">Votez pour ce modèle</a></center>
 						</article>
